; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-clock.c_test_clock_is_localtime_system.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-clock.c_test_clock_is_localtime_system.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"/etc/adjtime\00", align 1
@F_OK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [48 x i8] c"/etc/adjtime exists, clock_is_localtime() == %i\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_clock_is_localtime_system to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_clock_is_localtime_system() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @clock_is_localtime(i32* null)
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @F_OK, align 4
  %4 = call i64 @access(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %12

6:                                                ; preds = %0
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @log_info(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @IN_SET(i32 %9, i32 0, i32 1)
  %11 = call i32 @assert_se(i32 %10)
  br label %17

12:                                               ; preds = %0
  %13 = load i32, i32* %1, align 4
  %14 = icmp eq i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert_se(i32 %15)
  br label %17

17:                                               ; preds = %12, %6
  ret void
}

declare dso_local i32 @clock_is_localtime(i32*) #1

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32 @log_info(i8*, i32) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @IN_SET(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
